--- a/bar_pie_timeline_demo/index.html
+++ b/bar_pie_timeline_demo/index.html
@@ -193,7 +193,7 @@ option = {
                     '上海','\n江苏','浙江','\n安徽','福建','\n江西','山东','\n河南',
                     '湖北','\n湖南','广东','\n广西','海南','\n重庆','四川','\n贵州',
                     '云南','\n西藏','陕西','\n甘肃','青海','\n宁夏','新疆'
-                ],
+                ],//\n错开，防止重叠
                 splitLine: {show: false}//分割线，默认显示
             }
         ],
