--- a/hubei-down-js/index.html
+++ b/hubei-down-js/index.html
@@ -22,7 +22,7 @@
 
 
     <script src="jquery.min.js"></script>
-    <script type="text/javascript" src="echarts.js"></script>
+    <script type="text/javascript" src="../static/echarts.js"></script>
     <script type="text/javascript" src="mapjs/湖北.js"></script>
     <script type="text/javascript">
         function loadScript(url, callback) {
