--- a/bar_pie_timeline_demo/index.html
+++ b/bar_pie_timeline_demo/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div id="demo" style="width: 100%; height: 800px;"></div>
-<script type="text/javascript" src="echarts.js"></script>
+<script type="text/javascript" src="../static/echarts.js"></script>
 <script type="text/javascript">
 var dataMap = {};
 function dataFormatter(obj) {
