--- a/demo/scatter.html
+++ b/demo/scatter.html
@@ -30,7 +30,7 @@ var dataSH = randomdata(300);
 
 var itemStyle = {
     normal: {
-        opacity: 0.8,
+        opacity: 0.8,//透明度
         shadowBlur: 10,
         shadowOffsetX: 0,
         shadowOffsetY: 0,
@@ -44,7 +44,7 @@ option = {
         '#dd4444', '#fec42c', '#80F1BE'
     ],
     legend: {
-        y: 'top',
+        top: 'top',
         data: ['物料1', '物料2', '物料3'],
         textStyle: {
             color: '#fff',
@@ -52,10 +52,10 @@ option = {
         }
     },
     grid: {
-        x: '10%',
-        x2: 150,
-        y: '18%',
-        y2: '10%'
+        left: '10%',
+        right: 150,
+        top: '18%',
+        bottom: '10%'
     },
     tooltip: {
         padding: 10,
@@ -76,7 +76,7 @@ option = {
     xAxis: {
         type: 'value',
         name: '需求',
-        nameGap: 16,
+        nameGap: 16,//名称离坐标轴的距离
         nameTextStyle: {
             color: '#fff',
             fontSize: 14
@@ -113,7 +113,7 @@ option = {
             left: 'right',
             top: '10%',
             dimension: 2,
-            type: 'piecewise',
+            type: 'piecewise',//分段式
             pieces:[
                 {min:600,color:'black'},
                 {min:300, max:600},
@@ -122,7 +122,9 @@ option = {
                 {min:-600, max:-300},
                 {max:-600,color:'black'}
             ],
-            color:['#E0022B', '#E09107', '#A3E00B']
+            textStyle: {
+                color: '#fff'
+            }
         }
     ],
     series: [
