--- a/demo/scatter.html
+++ b/demo/scatter.html
@@ -122,6 +122,9 @@ option = {
                 {min:-600, max:-300},
                 {max:-600,color:'black'}
             ],
+            inRange: {
+                color: ['#5291FF', '#C7DBFF']
+            },
             textStyle: {
                 color: '#fff'
             }
