--- a/demo/boxplot.html
+++ b/demo/boxplot.html
@@ -80,26 +80,26 @@ var prepareBoxplotData = function (rawData, opt) {
 //boxplot 数据处理结束
 var myChart = echarts.init(document.getElementById('demo'));
 var totaldata = [[
-            [850, 740, 900, 1070, 930, 850, 950, 980, 980, 880, 1000, 980, 930, 650, 760, 810, 1000, 1000, 960, 960],
-            [960, 940, 960, 940, 880, 800, 850, 880, 900, 840, 830, 790, 810, 880, 880, 830, 800, 790, 760, 800],
-            [880, 880, 880, 860, 720, 720, 620, 860, 970, 950, 880, 910, 850, 870, 840, 840, 850, 840, 840, 840],
-            [890, 810, 810, 820, 800, 770, 760, 740, 750, 760, 910, 920, 890, 860, 880, 720, 840, 850, 850, 780],
-            [890, 840, 780, 810, 760, 810, 790, 810, 820, 850, 870, 870, 810, 740, 810, 940, 950, 800, 810, 870]
+            [85, 74, 90, 17, 93, 85, 95, 98, 98, 88, 10, 98, 93, 65, 76, 81, 10, 10, 96, 96],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
+            [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87]
     ],
     [
-            [850, 740, 900, 1070, 930, 850, 950, 980, 980, 880, 1000, 980, 930, 650, 760, 810, 1000, 1000, 960, 960],
-            [890, 840, 780, 810, 760, 810, 790, 810, 820, 850, 870, 870, 810, 740, 810, 940, 950, 800, 810, 870]
+            [85, 74, 90, 17, 93, 85, 95, 98, 98, 88, 10, 98, 93, 65, 76, 81, 10, 10, 96, 96],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80]
     ],
     [
-            [850, 740, 900, 1070, 930, 850, 950, 980, 980, 880, 1000, 980, 930, 650, 760, 810, 1000, 1000, 960, 960],
-            [960, 940, 960, 940, 880, 800, 850, 880, 900, 840, 830, 790, 810, 880, 880, 830, 800, 790, 760, 800],
-            [880, 880, 880, 860, 720, 720, 620, 860, 970, 950, 880, 910, 850, 870, 840, 840, 850, 840, 840, 840],
-            [890, 840, 780, 810, 760, 810, 790, 810, 820, 850, 870, 870, 810, 740, 810, 940, 950, 800, 810, 870]
+            [85, 74, 90, 17, 93, 85, 95, 98, 98, 88, 10, 98, 93, 65, 76, 81, 10, 10, 96, 96],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78]
     ],
     [
-            [850, 740, 900, 1070, 930, 850, 950, 980, 980, 880, 1000, 980, 930, 650, 760, 810, 1000, 1000, 960, 960],
-            [890, 810, 810, 820, 800, 770, 760, 740, 750, 760, 910, 920, 890, 860, 880, 720, 840, 850, 850, 780],
-            [890, 840, 780, 810, 760, 810, 790, 810, 820, 850, 870, 870, 810, 740, 810, 940, 950, 800, 810, 870]
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78]
     ]
 ];
 var data = prepareBoxplotData(totaldata[0]);
@@ -149,7 +149,7 @@ option = {
     },
     yAxis: {
         type: 'value',
-        name: '退库率',
+        name: '退库率%',
         splitArea: {
             show: true
         }
@@ -190,25 +190,9 @@ $("#search").click(function () {
     },
        series: [
         {
-            name: 'boxplot',
-            type: 'boxplot',
-            data: data.boxData,
-            tooltip: {
-                formatter: function (param) {
-                    return [
-                        'Experiment ' + param.name + ': ',
-                        'upper: ' + param.data[5],
-                        'Q3: ' + param.data[4],
-                        'median: ' + param.data[3],
-                        'Q1: ' + param.data[2],
-                        'lower: ' + param.data[1]
-                    ].join('<br/>');
-                }
-            }
+            data: data.boxData
         },
         {
-            name: 'outlier',
-            type: 'scatter',
             data: data.outliers
         }
     ]
