--- a/demo/boxplot.html
+++ b/demo/boxplot.html
@@ -197,7 +197,7 @@ $("#search").click(function () {
         }
     ]
    }
-   myChart.setOption(option);
+   myChart.setOption(option);//合并配置，加参数true，不合并配置
 });
 </script>
 </body>
