--- a/demo/boxplot.html
+++ b/demo/boxplot.html
@@ -84,6 +84,58 @@ var totaldata = [[
             [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
             [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
             [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
+            [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
+            [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
+            [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
+            [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
+            [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
+            [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
+            [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
+            [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
+            [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
+            [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
+            [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
+            [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
+            [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87],
+            [96, 94, 96, 94, 88, 80, 85, 88, 90, 84, 83, 79, 81, 88, 88, 83, 80, 79, 76, 80],
+            [88, 88, 88, 86, 72, 72, 62, 86, 97, 95, 88, 91, 85, 87, 84, 84, 85, 84, 84, 84],
+            [89, 81, 81, 82, 80, 77, 76, 74, 75, 76, 91, 92, 89, 86, 88, 72, 84, 85, 85, 78],
             [89, 84, 78, 81, 76, 81, 79, 81, 82, 85, 87, 87, 81, 74, 81, 94, 95, 80, 81, 87]
     ],
     [
@@ -154,6 +206,22 @@ option = {
             show: true
         }
     },
+    dataZoom: [//区域缩放
+        {
+            type: 'inside',//内置在坐标系内，通过鼠标滚轮等控制
+            start: 0,//开始百分比
+            end: 100//结束百分比
+        },
+        {
+            show: true,
+            height: 20,
+            type: 'slider',//滑动条
+            top: '90%',
+            xAxisIndex: [0],//指定坐标轴
+            start: 0,
+            end: 100
+        }
+    ],
     series: [
         {
             name: 'boxplot',
