--- a/demo/rose_timeline.html
+++ b/demo/rose_timeline.html
@@ -8,9 +8,8 @@
 <div id="demo" style="width: 100%; height: 800px;"></div>
 <script type="text/javascript" src="../static/echarts.js"></script>
 <script type="text/javascript">
-var dataMap = {};
 
-dataMap = {
+var dataMap = {
     //max : 60000,
     2014:[
         {name: '项目一', value: 14113},
